--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,4 +21,8 @@ body {
   .btn-outline{
     @apply rounded-[60px] px-3 font-medium focus:shadow-none sm:text-xs md:text-base text-[#5296dd] border border-[#5296dd]  hover:border-[#92bddf]  hover:text-[#92bddf] mx-2 font-semibold;
   }
+
+  .btn-oauth{
+    @apply rounded-[60px] px-3 font-medium focus:shadow-none sm:text-xs md:text-base h-9  border border-primary/40  hover:bg-slate-200 mx-2 font-semibold;
+  }
 }
