add Community Description

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,11 +15,11 @@ body {
 
 @layer components{
   .btn-solid {
-    @apply rounded-[60px] px-3 font-medium focus:shadow-none  sm:text-xs md:text-base text-slate-100 bg-[#5296dd] hover:bg-[#92bddf] mx-2 font-semibold;
+    @apply rounded-[60px] px-3 font-medium focus:shadow-none  sm:text-xs md:text-base text-slate-100 bg-[#5296dd] hover:bg-[#2a70bb] mx-2 font-semibold;
   }
   
   .btn-outline{
-    @apply rounded-[60px] px-3 font-medium focus:shadow-none sm:text-xs md:text-base text-[#5296dd] border border-[#5296dd]  hover:border-[#92bddf]  hover:text-[#92bddf] mx-2 font-semibold;
+    @apply rounded-[60px] px-3 font-medium focus:shadow-none sm:text-xs md:text-base text-[#5296dd] border border-[#5296dd]   hover:border-2 duration-150    mx-2 font-semibold;
   }
 
   .btn-oauth{
